--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,23 @@
 version: "3.7"
 
 services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8000:8000
+    command: ["gunicorn", "--reload", "--bind", "0.0.0.0", "src:create_app()"]
+    volumes:
+      - ./:/flask-graphql
+    environment:
+      - FLASK_APP=src
+      - DATABASE_URI=postgresql://backend:backend123@db:5432/backend
+    depends_on:
+      - db
+    networks:
+      - backendnet
+
   db:
     image: postgres
     restart: always
