--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 alembic==1.13.1
+aniso8601==9.0.1
+annotated-types==0.6.0
 black==24.4.0
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+graphene==3.3
+graphql-core==3.2.3
+graphql-relay==3.2.0
+gunicorn==22.0.0
+importlib_metadata==7.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.3
@@ -13,6 +20,11 @@ mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
 platformdirs==4.2.0
+psycopg2-binary==2.9.9
+pydantic==2.7.0
+pydantic_core==2.18.1
 SQLAlchemy==2.0.29
+tomli==2.0.1
 typing_extensions==4.11.0
 Werkzeug==3.0.2
+zipp==3.18.1
