--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 alembic==1.13.1
-aniso8601==9.0.1
+aniso8601==7.0.0
 annotated-types==0.6.0
-black==24.4.0
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.3
+Flask-GraphQL==2.0.1
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
-graphene==3.3
-graphql-core==3.2.3
-graphql-relay==3.2.0
+graphene==2.1.9
+graphql-core==2.3.2
+graphql-relay==2.0.1
+graphql-server-core==1.2.0
 gunicorn==22.0.0
-importlib_metadata==7.1.0
-itsdangerous==2.1.2
+inotify==0.2.10
+itsdangerous==2.2.0
 Jinja2==3.1.3
 Mako==1.3.3
 MarkupSafe==2.1.5
-mypy-extensions==1.0.0
+nose==1.3.7
 packaging==24.0
-pathspec==0.12.1
-platformdirs==4.2.0
+promise==2.3
 psycopg2-binary==2.9.9
 pydantic==2.7.0
 pydantic_core==2.18.1
+Rx==1.6.3
+six==1.16.0
 SQLAlchemy==2.0.29
-tomli==2.0.1
 typing_extensions==4.11.0
 Werkzeug==3.0.2
-zipp==3.18.1
